# aurora_slint_demo

./: Cargo.toml  Cross.toml  Dockerfile.aarch64  Dockerfile.armv7  README.md  aarch64_build.sh  arm_build.sh  build.rs
.cargo/: config.toml
rpm/: com.lmaxyz.SlintAuroraDemo.spec
src/: main.rs
ui/: appwindow.slint
